fixes wordwrapping

--- a/src/less/_breakout.less
+++ b/src/less/_breakout.less
@@ -209,6 +209,7 @@ body {
 
 .bo-text {
   font-size: 16px;
+  word-wrap: break-word;
 }
 
 .bo-profile-image {
